--- a/index.html
+++ b/index.html
@@ -457,47 +457,57 @@
          </section>
 
          <!-- banner -->
-          <section id="banner" class="mt-5 position-relative">
+          <section id="banner" class="mt-5 position-relative pb-5 pb-lg-0">
             <!-- shape -->
-             <img alt="shape" src="img/svg/Shape.svg" class="position-absolute start-0 -z-1 -top-153">
+             <img alt="shape" src="img/svg/Shape.svg" class="position-absolute d-none d-lg-block start-0 -z-1 -top-153">
             <!--  -->
-            <div class="row align-items-end container-fluid px-0">
-              <div class="col-9">
+            <div class="row gy-5 align-items-end container-fluid px-0">
+              <div class="order-lg-0 order-1 col-lg-9 col-12 px-0">
                 <div dir="ltr" class="swiper banner">
                   <div class="swiper-wrapper">
                    <div class="swiper-slide">
                        <div>
-                         <img alt="banner" src="img/Add your image here.png" class="rounded-tl-150 w-100 img-fluid">
+                         <img alt="banner" src="img/Rectangle 32.png" class="rounded-tl-150 rounded-20 rounded-tl-lg-20 w-100 img-fluid">
                        </div>
                    </div>
                    <div class="swiper-slide">
                        <div>
-                         <img alt="banner" src="img/Add your image here.png" class="rounded-tl-150 w-100 img-fluid">
+                         <img alt="banner" src="img/Rectangle 32.png" class="rounded-tl-150 rounded-20 rounded-tl-lg-20 w-100 img-fluid">
+                       </div>
+                   </div>
+                   <div class="swiper-slide">
+                       <div>
+                         <img alt="banner" src="img/Rectangle 32.png" class="rounded-tl-150 rounded-20 rounded-tl-lg-20 w-100 img-fluid">
+                       </div>
+                   </div>
+                   <div class="swiper-slide">
+                       <div>
+                         <img alt="banner" src="img/Rectangle 32.png" class="rounded-tl-150 rounded-20 rounded-tl-lg-20 w-100 img-fluid">
                        </div>
                    </div>
                   </div>
-                  <div class="swiper-button-next left-auto right-140 bottom-27 top-auto rounded-l-20 w-90 h-77 bg-second">
+                  <div class="swiper-button-next d-none d-lg-flex left-auto right-140 bottom-27 top-auto rounded-l-20 w-90 h-77 bg-second">
                     <svg class="-rotate-180" width="47" height="24" viewBox="0 0 47 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M46.3386 10.6948C46.3381 10.6942 46.3376 10.6936 46.337 10.693L36.8538 1.25554C36.1433 0.548549 34.9942 0.55118 34.287 1.26171C33.58 1.97216 33.5827 3.12126 34.2931 3.82835L40.6602 10.1645H2.22433C1.22196 10.1645 0.409424 10.9771 0.409424 11.9794C0.409424 12.9818 1.22196 13.7943 2.22433 13.7943H40.6601L34.2932 20.1305C33.5828 20.8376 33.58 21.9867 34.2871 22.6972C34.9943 23.4078 36.1435 23.4102 36.8539 22.7033L46.3371 13.2658C46.3376 13.2653 46.3381 13.2647 46.3387 13.2641C47.0495 12.5547 47.0473 11.4019 46.3386 10.6948Z" fill="white"/>
                     </svg>
                   </div>
-                  <div class="swiper-button-prev rounded-r-20 w-90 h-77 left-auto right-51 bottom-27 top-auto bg-second">
+                  <div class="swiper-button-prev d-none d-lg-flex rounded-r-20 w-90 h-77 left-auto right-51 bottom-27 top-auto bg-second">
                     <svg width="47" height="24" viewBox="0 0 47 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M46.3386 10.6948C46.3381 10.6942 46.3376 10.6936 46.337 10.693L36.8538 1.25554C36.1433 0.548549 34.9942 0.55118 34.287 1.26171C33.58 1.97216 33.5827 3.12126 34.2931 3.82835L40.6602 10.1645H2.22433C1.22196 10.1645 0.409424 10.9771 0.409424 11.9794C0.409424 12.9818 1.22196 13.7943 2.22433 13.7943H40.6601L34.2932 20.1305C33.5828 20.8376 33.58 21.9867 34.2871 22.6972C34.9943 23.4078 36.1435 23.4102 36.8539 22.7033L46.3371 13.2658C46.3376 13.2653 46.3381 13.2647 46.3387 13.2641C47.0495 12.5547 47.0473 11.4019 46.3386 10.6948Z" fill="white"/>
                     </svg>
                   </div>
                 </div>
               </div>
-              <div class="position-absolute start-0 w-47 px-0 z-10 top-189">
-               <div class="bg-main rounded-tr-112 rounded-br-9 pb-5">
-                  <img alt="img" src="img/pipe-steel-construction-stack-realistic 2.png" class="img-fluid d-block me-auto position-relative -top-165">
-                  <h1 class="text-white font-bold fs-56 -mt-255 px-4 position-relative">
+              <div class="position-absolute h-385 h-lg-328 h-sm-279 position-lg-static start-0 w-lg-100 w-47 px-0 z-10 top-189">
+               <div class="bg-main rounded-tr-112 h-385 h-lg-328 h-sm-279 rounded-br-9 pb-5">
+                  <img alt="img" src="img/pipe-steel-construction-stack-realistic 2.png" class="img-fluid w-sm-170 w-lg-230 d-block me-auto position-relative -top-lg-29 -top-165">
+                  <h1 class="text-white font-bold fs-56 fs-xl-45 fs-sm-24 -mt-sm-151 -mt-lg-223 -mt-255 px-4 position-relative">
                     محصولات فولادی <br>
 صنعتی و ساختمانی
                   </h1>
-                  <div class="ms-xl-5 ps-xl-4">
-                    <form class="bg-white shadow-5 mt-4 position-relative rounded-20 overflow-hidden mx-4 ms-5 h-70 d-flex align-items-center gap-3">
-                      <input class="fs-20 border-0 fw-bold outline-none w-100 bg-white flex-grow-1 pe-3" placeholder="به دنبال چه محصولی هستی ؟">
+                  <div class="ms-xl-5 ps-xl-4 mt-sm-4 mt-5">
+                    <form class="bg-white shadow-5 mt-4 position-relative rounded-20 overflow-hidden mx-4 ms-sm-5 ms-4 h-70 d-flex align-items-center gap-3">
+                      <input class="fs-20 fs-lg-14 border-0 fw-bold outline-none w-100 bg-white flex-grow-1 pe-3" placeholder="به دنبال چه محصولی هستی ؟">
                       <button class="button-hover-2 flex-shrink-0 w-70 h-70 d-flex align-items-center justify-content-center bg-second border-0 rounded-20">
                         <img alt="icon" src="img/svg/search-normal.svg">
                       </button>
@@ -1031,7 +1041,7 @@
                  </div>
                 </div>
                 <!--  -->
-                <div class="services d-md-none">
+                <div class="services2 d-md-none">
                   <div class="swiper-slide mb-4">
                     <div class="rounded-20 border-main p-4 position-relative text-center bg-white">
                      <!-- stars -->
