--- a/index.html
+++ b/index.html
@@ -1278,59 +1278,59 @@
                 </section>
 
                 <!-- blog -->
-                 <section class="mt-5 pt-5">
-                  <div class="container mt-5">
-                    <h1 class="fs-40 text-center font-bold text-main2 pt-4">آخرین اخبار و منابع</h1>
-                    <div class="row g-5 mt-3 align-items-start">
-                     <div class="col-md-6">
+                 <section class="mt-md-5 pt-5">
+                  <div class="container mt-md-5">
+                    <h1 class="fs-40 fs-sm-20 text-center font-bold text-main2 pt-4">آخرین اخبار و منابع</h1>
+                    <div class="row g-xl-5 g-3 mt-3 align-items-start">
+                     <div class="col-xl-6 order-last order-xl-first">
                        <div>
                         <a class="d-flex align-items-center gap-4 mb-4 blog-hover">
                          <div class="position-relative flex-shrink-0">
-                          <p class="fw-bold text-white mb-0 bottom-8 start-0 m-3 bg-second py-1 px-3 position-absolute rounded-pill">PRESS RELEASE</p>
-                          <img alt="img" src="img/Rectangle 33.png" class="img-fluid rounded-16 w-100">
+                          <p class="fw-bold text-white mb-0 bottom-8 fs-sm-8 start-0 m-3 bg-second py-1 px-sm-3 px-2 position-absolute rounded-pill">PRESS RELEASE</p>
+                          <img alt="img" src="img/Rectangle 33.png" class="img-fluid rounded-16 w-sm-125 h-sm-88 w-100">
                          </div>
                          <div>
-                          <h2 class="fs-20 font-bold text-dark mb-2">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ</h2>
-                          <p class="text-secondary fs-18 text-justify mb-0">
+                          <h2 class="fs-20 font-bold text-dark mb-2 fs-sm-12">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ</h2>
+                          <p class="text-secondary fs-18 text-justify mb-0 fs-sm-10">
                             لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، 
                           </p>
                         </div>
                         </a>
                         <a class="d-flex align-items-center gap-4 mb-4 blog-hover">
                           <div class="position-relative flex-shrink-0">
-                           <p class="fw-bold text-white mb-0 bottom-8 start-0 m-3 bg-second py-1 px-3 position-absolute rounded-pill">NEWS</p>
-                           <img alt="img" src="img/Rectangle 34.png" class="img-fluid rounded-16 w-100">
+                           <p class="fw-bold text-white mb-0 bottom-8 fs-sm-8 start-0 m-3 bg-second py-1 px-sm-3 px-2 position-absolute rounded-pill">NEWS</p>
+                           <img alt="img" src="img/Rectangle 34.png" class="img-fluid rounded-16 w-sm-125 h-sm-88 w-100">
                           </div>
                           <div>
-                           <h2 class="fs-20 font-bold text-dark mb-2">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ</h2>
-                           <p class="text-secondary fs-18 text-justify mb-0">
+                           <h2 class="fs-20 font-bold text-dark mb-2 fs-sm-12">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ</h2>
+                           <p class="text-secondary fs-18 text-justify mb-0 fs-sm-10">
                              لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، 
                            </p>
                          </div>
                          </a>
                          <a class="d-flex align-items-center gap-4 blog-hover">
                           <div class="position-relative flex-shrink-0">
-                           <p class="fw-bold text-white mb-0 bottom-8 start-0 m-3 bg-second py-1 px-3 position-absolute rounded-pill">NEWS</p>
-                           <img alt="img" src="img/Group 43.png" class="img-fluid rounded-16 w-100">
+                           <p class="fw-bold text-white mb-0 bottom-8 fs-sm-8 start-0 m-3 bg-second py-1 px-sm-3 px-2 position-absolute rounded-pill">NEWS</p>
+                           <img alt="img" src="img/Group 43.png" class="img-fluid rounded-16 w-1 w-sm-125 h-sm-8800">
                           </div>
                           <div>
-                           <h2 class="fs-20 font-bold text-dark mb-2">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ</h2>
-                           <p class="text-secondary fs-18 text-justify mb-0">
+                           <h2 class="fs-20 font-bold text-dark mb-2 fs-sm-12">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ</h2>
+                           <p class="text-secondary fs-18 text-justify mb-0 fs-sm-10">
                              لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، 
                            </p>
                          </div>
                          </a>
                        </div>
                      </div>
-                     <div class="col-md-6">
+                     <div class="col-xl-6">
                       <div class="d-flex flex-column align-items-center gap-4 mb-5 blog-hover">
                         <div class="position-relative flex-shrink-0 w-100">
-                         <p class="fw-bold text-white mb-0 bottom-8 start-0 m-3 bg-second py-1 px-3 position-absolute rounded-pill">NEWS</p>
+                         <p class="fw-bold text-white mb-0 bottom-8 fs-sm-12 start-0 m-3 bg-second py-1 px-3 position-absolute rounded-pill">NEWS</p>
                          <img alt="img" src="img/Rectangle 32.png" class="img-fluid rounded-16 w-100">
                         </div>
                         <div>
-                         <h2 class="fs-20 font-bold text-dark mb-2">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است،</h2>
-                         <p class="text-secondary fs-18 text-justify mb-0">
+                         <h2 class="fs-20 fs-sm-14 font-bold text-dark mb-2">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است،</h2>
+                         <p class="text-secondary fs-18 fs-sm-12 text-justify mb-0">
                           لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است،  چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، 
                          </p>
                          <a class="text-second fw-bold mt-4 d-inline-block">خواندن ادامه</a>
@@ -1348,21 +1348,25 @@
         <!-- bg -->
          <img alt="bg" src="img/Rectangle 4847.png" class="position-absolute w-100 h-100 end-0 top-0 bottom-0 start-0">
         <!--  -->
-        <div class="container position-relative mt-5">
-           <div class="pb-5">
-            <div class="row g-5 pb-5">
-              <div class="col-md-3">
+        <div class="container position-relative mt-lg-5">
+           <div class="pb-lg-5">
+            <div class="row g-sm-5 g-2 gy-5 pb-lg-5">
+              <div class="col-lg-3">
+                <div class="d-lg-none d-flex align-items-center mb-5 gap-3">
+                  <img alt="logo" src="img/logo.PNG" class="w-65 h-80 d-block">
+                  <p class="font-bold fs-24 text-second mb-0">اکسین صنعت</p>
+                 </div>
                 <h5 class="fw-bold text-white fs-18">درباره ی ما</h5>
                 <p class="fs-12 font-bold text-white-50 mt-4">
                   لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است
                 </p>
                 <p class="mt-4 text-white fs-14">برای دریافت اخرین اخبار عضو شوید</p>
                 <form class="h-38 d-flex align-items-center rounded-4 overflow-hidden">
-                 <input class="fs-14 outline-none border-0 bg-white flex-grow-1 p-3 h-100" placeholder="ایمیل ...">
-                 <button class="fw-bold fs-18 text-white border-0 bg-second px-3 h-100 button-hover-2"><span>عضویت</span></button>
+                 <input class="fs-14 outline-none border-0 bg-white flex-grow-1 p-3 h-100 w-100" placeholder="ایمیل ...">
+                 <button class="fw-bold flex-shrink-0 fs-18 fs-xl-14 text-white border-0 bg-second px-3 h-100 button-hover-2"><span>عضویت</span></button>
                 </form>
               </div>
-              <div class="col-md-2">
+              <div class="col-lg-2 col-6">
                 <h5 class="fw-bold fs-18 text-white">صفحات</h5>
                 <ul class="list-unstyled m-0 p-0 mt-4">
                   <li class="mb-3">
@@ -1403,7 +1407,7 @@
                   </li>
                 </ul>
               </div>
-              <div class="col-md-3">
+              <div class="col-lg-3 col-6">
                 <h5 class="fw-bold fs-18 text-white">خدمات ما</h5>
                 <ul class="list-unstyled m-0 p-0 mt-4">
                   <li class="mb-3">
@@ -1444,31 +1448,71 @@
                   </li>
                 </ul>
               </div>
-              <div class="col-md-4">
+              <div class="col-lg-4">
+                <div class="d-flex flex-column d-lg-none align-items-center justify-content-between gap-5 mb-5">
+                  <div class="rounded-10 bg-second w-100 p-3 py-2 ps-5 d-flex align-items-center justify-content-center gap-3">
+                    <div class="w-52 h-52 rounded-4 bg-white d-flex align-items-center justify-content-center">
+                       <img alt="icon" src="img/svg/call-calling (4).svg">
+                    </div>
+                    <div class="d-flex align-items-center gap-2">
+                     <p class="mb-0 f-14 text-white">
+                       شماره تماس
+                     </p>
+                     <p class="mb-0 text-white font-bold">
+                        09196784367
+                     </p>
+                    </div>
+                  </div>
+                  <div class="d-flex align-items-center justify-content-between w-100 gap-4">
+                   <p class="mb-0 fs-18 fs-sm-16 font-bold text-white">مارو دنبال کنید :</p>
+                   <div class="d-flex align-items-center gap-2">
+                     <a class="social-hover d-flex align-items-center justify-content-center bg-white rounded-circle w-32 h-32">
+                       <svg width="19" height="15" viewBox="0 0 19 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                         <path d="M9.77267 14.5036C11.5657 14.5036 13.3588 14.4847 15.1519 14.5099C16.9565 14.5351 18.2076 13.1891 18.5189 11.7425C18.5881 11.4343 18.6227 11.1072 18.6227 10.7865C18.6342 8.67318 18.6284 6.55989 18.6284 4.44659C18.6227 2.31443 17.164 0.716876 15.2095 0.716876C11.5773 0.710587 7.94501 0.710587 4.31853 0.716876C2.37556 0.716876 0.916898 2.32072 0.911133 4.43401C0.911133 6.5536 0.911133 8.67318 0.911133 10.7928C0.916898 12.8557 2.31214 14.4533 4.19745 14.491C6.05394 14.5288 7.91619 14.4973 9.77267 14.5036ZM7.46071 10.5601C7.46071 8.56626 7.46071 6.61649 7.46071 4.63528C9.01163 5.62903 10.5395 6.60392 12.0962 7.59767C10.5337 8.59771 9.01163 9.5663 7.46071 10.5601Z" fill="#EA9117"></path>
+                       </svg>
+                     </a>
+                     <a class="social-hover d-flex align-items-center justify-content-center bg-white rounded-circle w-32 h-32">
+                       <svg width="16" height="15" viewBox="0 0 16 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                         <path d="M15.2482 9.13337V14.4489H12.1665V9.48961C12.1665 8.24438 11.7216 7.39401 10.6057 7.39401C9.75424 7.39401 9.24839 7.96652 9.025 8.52087C8.94387 8.71898 8.92296 8.99409 8.92296 9.27196V14.4487H5.84098C5.84098 14.4487 5.88235 6.04927 5.84098 5.17982H8.92319V6.4933C8.91698 6.50365 8.90825 6.51376 8.90273 6.52364H8.92319V6.4933C9.33274 5.86311 10.0631 4.96217 11.7006 4.96217C13.7282 4.96217 15.2482 6.28692 15.2482 9.13337ZM2.61697 0.711914C1.56276 0.711914 0.873047 1.40393 0.873047 2.31314C0.873047 3.20305 1.54276 3.91506 2.57652 3.91506H2.59652C3.67142 3.91506 4.33975 3.20305 4.33975 2.31314C4.3193 1.40393 3.67142 0.711914 2.61697 0.711914ZM1.05622 14.4489H4.13705V5.17982H1.05622V14.4489Z" fill="#EA9117"></path>
+                       </svg>
+                     </a>
+                     <a class="social-hover d-flex align-items-center justify-content-center bg-white rounded-circle w-32 h-32">
+                       <svg width="17" height="14" viewBox="0 0 17 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                         <path d="M16.5316 2.20394C15.956 2.4592 15.3368 2.63184 14.6874 2.70895C15.3505 2.31169 15.8593 1.68312 16.0994 0.932908C15.479 1.30095 14.7916 1.56794 14.0605 1.71186C13.4749 1.08808 12.6404 0.698242 11.7164 0.698242C9.94349 0.698242 8.50561 2.13617 8.50561 3.9091C8.50561 4.16077 8.5341 4.40573 8.58917 4.64088C5.92077 4.50702 3.55479 3.22881 1.97108 1.28563C1.69476 1.75975 1.53625 2.31169 1.53625 2.90003C1.53625 4.01374 2.1035 4.99695 2.96455 5.5726C2.43848 5.55607 1.94307 5.41168 1.51039 5.17055C1.51015 5.1842 1.51015 5.19785 1.51015 5.21126C1.51015 6.767 2.61735 8.06461 4.08588 8.35938C3.81674 8.43313 3.53252 8.47216 3.24015 8.47216C3.03279 8.47216 2.8319 8.45229 2.63603 8.41493C3.04453 9.69027 4.23003 10.6186 5.63535 10.6447C4.53628 11.5061 3.15204 12.0192 1.64735 12.0192C1.38875 12.0192 1.13254 12.0041 0.881836 11.9742C2.302 12.8856 3.9901 13.4169 5.8032 13.4169C11.7089 13.4169 14.9386 8.52436 14.9386 4.28098C14.9386 4.14185 14.9355 4.00321 14.9293 3.86576C15.5571 3.41319 16.1014 2.84783 16.5316 2.20394Z" fill="#EA9117"></path>
+                       </svg>
+                     </a>
+                     <a class="social-hover d-flex align-items-center justify-content-center bg-white rounded-circle w-32 h-32">
+                       <svg width="9" height="18" viewBox="0 0 9 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                         <path d="M8.43146 9.33472H6.07678V17.9614H2.50924V9.33472H0.8125V6.30296H2.50924V4.34107C2.50924 2.93811 3.17565 0.741211 6.10854 0.741211L8.75114 0.752267V3.69511H6.83376C6.51925 3.69511 6.07701 3.85225 6.07701 4.5215V6.30579H8.74314L8.43146 9.33472Z" fill="#EA9117"></path>
+                       </svg>
+                     </a>
+                   </div>
+                  </div>
+                 </div>
                 <h5 class="fw-bold fs-18 text-white">مجوزهای ما</h5>
                 <div class="mt-1 row g-3">
-                  <div class="col-4">
+                  <div class="col-lg-4 col-2">
                     <a><img alt="img" src="img/Add your image here (3).png" class="img-fluid rounded-4 d-block w-100"></a>
                   </div>
-                  <div class="col-4">
+                  <div class="col-lg-4 col-2">
                     <a><img alt="img" src="img/Add your image here (4).png" class="img-fluid rounded-4 d-block w-100"></a>
                   </div>
-                  <div class="col-4">
+                  <div class="col-lg-4 col-2">
                     <a><img alt="img" src="img/Add your image here(1).png" class="img-fluid rounded-4 d-block w-100"></a>
                   </div>
-                  <div class="col-4">
+                  <div class="col-lg-4 col-2">
                     <a><img alt="img" src="img/Add your image here (4).png" class="img-fluid rounded-4 d-block w-100"></a>
                   </div>
-                  <div class="col-4">
+                  <div class="col-lg-4 col-2">
                     <a><img alt="img" src="img/Add your image here(1).png" class="img-fluid rounded-4 d-block w-100"></a>
                   </div>
-                  <div class="col-4">
+                  <div class="col-lg-4 col-2">
                     <a><img alt="img" src="img/Add your image here (3).png" class="img-fluid rounded-4 d-block w-100"></a>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="rounded-28 p-3 px-4 bg-main3 d-flex align-items-center justify-content-between gap-2">
+            <div class="rounded-28 p-3 px-4 bg-main3 d-lg-flex d-none align-items-center justify-content-between gap-2">
              <div class="d-flex align-items-center justify-content-between gap-3">
               <img alt="logo" src="img/logo.PNG" class="w-65 h-80 d-block">
               <p class="font-bold fs-24 text-second mb-0">اکسین صنعت</p>
@@ -1517,11 +1561,11 @@
         <div class="mt-5 position-relative">
           <div class="bg-main3 py-3">
              <div class="container d-flex align-items-center justify-content-between gap-2">
-              <div class="d-flex align-items-center gap-4 fs-12">
+              <div class="d-flex align-items-center gap-sm-4 gap-2 fs-12 fs-sm-8">
                 <a class="text-white second-hover">سیاست حفظ حریم خصوصی</a>
                 <a class="text-white second-hover">شرایط و ضوابط</a>
                </div>
-               <p class="mb-0 text-white fs-12">© Copyright 2024. طراحی  و توسعه اکسین صنعت</p>
+               <p class="mb-0 text-white fs-12 fs-sm-8">© Copyright 2024. طراحی  و توسعه اکسین صنعت</p>
              </div>
           </div>
         </div>
