--- a/index.html
+++ b/index.html
@@ -1172,13 +1172,13 @@
                     </div>
                     <div class="col-lg-6">
                       <div class="position-relative me-5 me-md-0 pe-5 pe-md-0">
-                        <div class="position-absolute bottom-47 -right-80 m-5 me-0 d-inline-flex align-items-center gap-3 bg-white rounded-10 p-sm-3 p-2 shadow-1">
+                        <div class="position-absolute bottom-47 right-lg-0 -right-80 m-5 mb-0 mb-sm-5 me-0 d-inline-flex align-items-center gap-3 bg-white rounded-10 p-sm-3 p-2 shadow-1">
                           <div class="w-64 w-sm-32 h-64 h-sm-32 flex-shrink-0 rounded-5 d-flex align-items-center justify-content-center bg-second">
                             <img alt="icon" src="img/svg/Group 1000006592.svg" class="w-sm-14">
                           </div>
                           <p class="fs-20 fs-sm-12 font-bold mb-0">11 سال تجربه در زمینه کار فولاد و فلزات</p>
                         </div>
-                        <div class="position-absolute -bottom-70 -right-140 m-5 me-0 d-inline-flex align-items-center gap-3 bg-white rounded-10 p-sm-3 p-2 shadow-1">
+                        <div class="position-absolute -bottom-70 right-lg-61 right-md-15 -right-140 m-5 me-0 d-inline-flex align-items-center gap-3 bg-white rounded-10 p-sm-3 p-2 shadow-1">
                           <p class="fs-20 fs-sm-12 font-bold mb-0">اکسین صنعت
                             گامی نو در صنعت فولاد</p>
                             <div class="w-64 w-sm-32 h-64 h-sm-32 flex-shrink-0 rounded-5 d-flex align-items-center justify-content-center bg-second">
