--- a/index.html
+++ b/index.html
@@ -1574,7 +1574,7 @@
        </footer>
 
        <!-- to top -->
-        <a href="#" id="goToUp" class="bg-second button-hover-2 button-hover-3 d-flex align-items-center justify-content-center w-42 h-42 rounded-5 position-fixed bottom-0 end-0 m-sm-5 m-4 z-10">
+        <a href="#" id="goToUp" class="bg-second button-hover-2 button-hover-3 d-flex align-items-center justify-content-center w-42 h-42 rounded-5 position-fixed bottom-0 end-0 m-sm-5 mb-5 m-4 z-10">
          <img alt="icon" src="img/svg/Arrow Icon (2).svg">
         </a>
     
