--- a/index.html
+++ b/index.html
@@ -1047,12 +1047,12 @@
                   <div class="swiper-slide mb-4">
                     <div class="rounded-20 border-main p-4 position-relative text-center bg-white">
                      <!-- stars -->
-                      <div class="w-35 h-35 position-absolute -top-18 -right-17 rounded-circle bg-white d-flex align-items-center justify-content-center">
+                      <div class="w-35 h-35 position-absolute -top-18 -right-17 right-sm-11 rounded-circle bg-white d-flex align-items-center justify-content-center">
                        <svg width="26" height="27" viewBox="0 0 26 27" fill="none" xmlns="http://www.w3.org/2000/svg">
                          <path d="M13.1999 0.657227L16.6571 10.0001L25.9999 13.4572L16.6571 16.9144L13.1999 26.2572L9.74274 16.9144L0.399902 13.4572L9.74274 10.0001L13.1999 0.657227Z" fill="#08349C"/>
                        </svg>
                       </div>
-                      <div class="w-35 h-35 position-absolute -bottom-18 -left-17 rounded-circle bg-white d-flex align-items-center justify-content-center">
+                      <div class="w-35 h-35 position-absolute -bottom-18 -left-17 left-sm-11 rounded-circle bg-white d-flex align-items-center justify-content-center">
                        <svg width="26" height="27" viewBox="0 0 26 27" fill="none" xmlns="http://www.w3.org/2000/svg">
                          <path d="M13.1999 0.657227L16.6571 10.0001L25.9999 13.4572L16.6571 16.9144L13.1999 26.2572L9.74274 16.9144L0.399902 13.4572L9.74274 10.0001L13.1999 0.657227Z" fill="#08349C"/>
                        </svg>
@@ -1072,12 +1072,12 @@
                   <div class="swiper-slide mb-4">
                     <div class="rounded-20 border-main p-4 position-relative text-center bg-white">
                      <!-- stars -->
-                      <div class="w-35 h-35 position-absolute -top-18 -right-17 rounded-circle bg-white d-flex align-items-center justify-content-center">
+                      <div class="w-35 h-35 position-absolute -top-18 -right-17 right-sm-11 rounded-circle bg-white d-flex align-items-center justify-content-center">
                        <svg width="26" height="27" viewBox="0 0 26 27" fill="none" xmlns="http://www.w3.org/2000/svg">
                          <path d="M13.1999 0.657227L16.6571 10.0001L25.9999 13.4572L16.6571 16.9144L13.1999 26.2572L9.74274 16.9144L0.399902 13.4572L9.74274 10.0001L13.1999 0.657227Z" fill="#08349C"/>
                        </svg>
                       </div>
-                      <div class="w-35 h-35 position-absolute -bottom-18 -left-17 rounded-circle bg-white d-flex align-items-center justify-content-center">
+                      <div class="w-35 h-35 position-absolute -bottom-18 -left-17 left-sm-11 rounded-circle bg-white d-flex align-items-center justify-content-center">
                        <svg width="26" height="27" viewBox="0 0 26 27" fill="none" xmlns="http://www.w3.org/2000/svg">
                          <path d="M13.1999 0.657227L16.6571 10.0001L25.9999 13.4572L16.6571 16.9144L13.1999 26.2572L9.74274 16.9144L0.399902 13.4572L9.74274 10.0001L13.1999 0.657227Z" fill="#08349C"/>
                        </svg>
@@ -1106,12 +1106,12 @@
                   <div class="swiper-slide">
                     <div class="rounded-20 border-main p-4 position-relative text-center bg-white">
                      <!-- stars -->
-                      <div class="w-35 h-35 position-absolute -top-18 -right-17 rounded-circle bg-white d-flex align-items-center justify-content-center">
+                      <div class="w-35 h-35 position-absolute -top-18 -right-17 right-sm-11 rounded-circle bg-white d-flex align-items-center justify-content-center">
                        <svg width="26" height="27" viewBox="0 0 26 27" fill="none" xmlns="http://www.w3.org/2000/svg">
                          <path d="M13.1999 0.657227L16.6571 10.0001L25.9999 13.4572L16.6571 16.9144L13.1999 26.2572L9.74274 16.9144L0.399902 13.4572L9.74274 10.0001L13.1999 0.657227Z" fill="#08349C"/>
                        </svg>
                       </div>
-                      <div class="w-35 h-35 position-absolute -bottom-18 -left-17 rounded-circle bg-white d-flex align-items-center justify-content-center">
+                      <div class="w-35 h-35 position-absolute -bottom-18 -left-17 left-sm-11 rounded-circle bg-white d-flex align-items-center justify-content-center">
                        <svg width="26" height="27" viewBox="0 0 26 27" fill="none" xmlns="http://www.w3.org/2000/svg">
                          <path d="M13.1999 0.657227L16.6571 10.0001L25.9999 13.4572L16.6571 16.9144L13.1999 26.2572L9.74274 16.9144L0.399902 13.4572L9.74274 10.0001L13.1999 0.657227Z" fill="#08349C"/>
                        </svg>
