--- a/index.html
+++ b/index.html
@@ -88,17 +88,17 @@
       </div>
 
   <!-- chart Modal -->
-  <div class="modal fade p-4" id="chartModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal fade p-sm-4" id="chartModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered max-w-1200">
     <div class="modal-content rounded-25">
       <div class="modal-body">
-        <div class="d-flex align-items-center justify-content-between flex-wrap gap-3 my-4 mx-5">
-          <div class="d-flex align-items-center gap-2">
+        <div class="d-flex align-items-center justify-content-between flex-wrap gap-3 my-4 mx-md-5">
+          <div class="d-flex fs-sm-14 align-items-center gap-2">
             <img alt="icon" src="img/svg/calendar.svg">
             <p class="font-bold text-second mb-0">آخرین بروزرسانی :</p>
             <p class="font-bold mb-0">1403/12/23</p>
           </div>
-          <h4 class="fs-24 font-bold mb-0 text-main2">نمودار تغییرات قیمت تیرآهن 12 ذوب آهن اصفهان</h4>
+          <h4 class="fs-24 fs-sm-20 font-bold mb-0 text-main2">نمودار تغییرات قیمت تیرآهن 12 ذوب آهن اصفهان</h4>
           <ul class="nav nav-pills border rounded-12 mb-0 p-0 fs-14 font-bold" id="pills-tab" role="tablist">
             <li class="nav-item" role="presentation">
               <button class="nav-link text-dark py-3 active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">ماهانه</button>
