--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 <body>
 
     <!-- login && register Modal -->
-    <div class="modal fade p-4" id="loginModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade p-sm-4" id="loginModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered max-w-979">
         <div class="modal-content rounded-43">
           <div class="modal-body p-4">
-              <div class="row g-4">
-                <div class="col-5">
+              <div class="row g-5">
+                <div class="col-md-5 col-12">
                   <h2 class="font-bold text-center fs-32 my-4">ثبت نام</h2>
                   <ul class="nav nav-pills bg-main5 max-w-224 p-2 mx-auto rounded-pill d-flex justify-content-center mb-0 p-0 fs-14 font-bold" id="pills-tab" role="tablist">
                     <li class="nav-item flex-grow-1 rounded-pill" role="presentation">
@@ -78,8 +78,8 @@
                   </div>
                 </div>
                 </div>
-                <div class="col-7">
-                  <img alt="img" src="img/Group 231.png" class="rounded-20 w-100">
+                <div class="col-md-7 px-0 col-12 d-none d-md-block">
+                  <img alt="img" src="img/Group 231.png" class="rounded-20 w-100 h-100">
                 </div>
               </div>
           </div>
