--- a/index.html
+++ b/index.html
@@ -1244,7 +1244,7 @@
           <div id="scroll-custom" class="h-450 h-sm-260 overflow-x-hidden">
             <div class="table-responsive">
               <table class="table">
-                <thead class="p-3 bg-main4 font-bold fs-20 fs-md-12 text-main2 text-center">
+                <thead class="p-3 bg-main4 font-bold fs-18 fs-md-12 text-main2 text-center">
                   <tr class="position-sticky z-10 top-0">
                     <th scope="col" class="p-3">کد</th>
                     <th scope="col" class="p-3">نام</th>
@@ -1257,7 +1257,7 @@
                     <th scope="col" class="p-3">خرید</th>
                   </tr>
                 </thead>
-                <tbody class="fw-bold text-dark border-bottom fs-sm-10 text-center">
+                <tbody class="fw-bold text-dark border-bottom fs-14 fs-sm-10 text-center">
                   <tr>
                     <th class="p-3" scope="row">320498</th>
                     <td class="p-3">میلگرد اج دار 22</td>
