--- a/contact.html
+++ b/contact.html
@@ -934,9 +934,14 @@
   </header>
 
   <!-- main -->
-  <main>
+  <main class="position-relative">
 
-    <section class="mt-5 py-3">
+    <img alt="img" src="img/Group 70.png" class="position-absolute -top-25 mx-auto end-0 start-0">
+    <img alt="img" src="img/Group 70.png" class="position-absolute d-none d-md-block  bottom-99 ml-145 start-0">
+    <img alt="img" src="img/Group 81.png" class="position-absolute d-none d-md-block -bottom-109 start-0">
+    <img alt="img" src="img/Group 82.png" class="position-absolute -bottom-109 end-0">
+
+    <section class="mt-5 py-3 position-relative">
       <div class="container">
         <div class="rounded-16 bg-white shadow-8 max-w-950 mx-auto p-2 p-sm-4 pb-5">
           <div class="mt-4">
